--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "firebase": "^10.3.1",
     "heroicons": "^2.0.18",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
     "tailwind-scrollbar": "^3.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3"
